--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 	"dependencies": {
 		"js-base64": "^3.7.5",
 		"saos": "^1.3.1",
-		"showdown": "^2.1.0"
+		"showdown": "^2.1.0",
+		"svelte-loading-spinners": "^0.3.4"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
