--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
 		"test:integration": "playwright test",
 		"test:unit": "vitest"
 	},
-	"dependencies": {
-		"js-base64": "^3.7.5",
-		"saos": "^1.3.1",
-		"showdown": "^2.1.0",
-		"svelte-loading-spinners": "^0.3.4"
-	},
 	"devDependencies": {
+		"js-base64": "^3.7.5",
+		"showdown": "^2.1.0",
+		"svelte-loading-spinners": "^0.3.4",
+		"saos": "^1.3.1",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
