--- a/package.json
+++ b/package.json
@@ -15,10 +15,6 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
-		"js-base64": "^3.7.5",
-		"showdown": "^2.1.0",
-		"svelte-loading-spinners": "^0.3.4",
-		"saos": "^1.3.1",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
@@ -27,14 +23,21 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"js-base64": "^3.7.5",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
+		"saos": "^1.3.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-loading-spinners": "^0.3.4",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fontsource-variable/jetbrains-mono": "^5.0.9",
+		"svelte-markdown": "^0.3.0"
+	}
 }
