--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@fontsource-variable/jetbrains-mono": "^5.0.9",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
@@ -30,14 +31,14 @@
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"svelte-loading-spinners": "^0.3.4",
+		"svelte-markdown": "^0.3.0",
+		"three": "^0.155.0",
+		"@types/three": "^0.155.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2"
 	},
 	"type": "module",
-	"dependencies": {
-		"@fontsource-variable/jetbrains-mono": "^5.0.9",
-		"svelte-markdown": "^0.3.0"
-	}
+	"dependencies": {}
 }
