--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/three": "^0.155.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -33,12 +34,13 @@
 		"svelte-loading-spinners": "^0.3.4",
 		"svelte-markdown": "^0.3.0",
 		"three": "^0.155.0",
-		"@types/three": "^0.155.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2"
 	},
 	"type": "module",
-	"dependencies": {}
+	"dependencies": {
+		"svelte-cubed": "^0.2.1"
+	}
 }
