--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
 	"devDependencies": {
 		"@fontsource-variable/jetbrains-mono": "^5.2.6",
 		"@playwright/test": "^1.53.1",
-		"@sveltejs/adapter-auto": "^2.1.1",
-		"@sveltejs/kit": "^1.30.4",
+		"@sveltejs/adapter-vercel": "^6.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@types/three": "^0.155.1",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
 		"@typescript-eslint/parser": "^5.62.0",
@@ -26,20 +27,23 @@
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-svelte": "^2.46.1",
 		"js-base64": "^3.7.7",
-		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.1",
+		"prettier": "^3.0.0",
+		"prettier-plugin-svelte": "^3.0.0",
 		"saos": "^1.3.1",
-		"svelte": "^4.2.20",
-		"svelte-check": "^3.8.6",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
 		"svelte-loading-spinners": "^0.3.6",
 		"svelte-markdown": "^0.3.0",
 		"three": "^0.155.0",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3",
-		"vite": "^4.5.14",
-		"vitest": "^0.32.4"
+		"vite": "^6.0.0",
+		"vitest": "^2.0.0"
 	},
 	"type": "module",
+	"engines": {
+		"node": ">=20.0.0"
+	},
 	"dependencies": {
 		"@vercel/blob": "^1.1.1",
 		"mdsvex": "^0.12.6",
