--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 	},
 	"dependencies": {
 		"@vercel/blob": "^1.1.1",
+		"locomotive-scroll": "^4.1.4",
 		"mdsvex": "^0.12.6",
 		"svelte-cubed": "^0.2.1"
 	}
