chore: format code and fix locomotive scroll type error
- Run prettier to format all files
- Remove unsupported 'repeat' property from LocomotiveScroll config
- Build passes successfully

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,3 @@
 {
-    "cSpell.words": [
-        "BOID's",
-        "boids",
-        "GLTF",
-        "Kodi",
-        "renude"
-    ]
+	"cSpell.words": ["BOID's", "boids", "GLTF", "Kodi", "renude"]
 }
