fix: make GitHub TOKEN optional to prevent build failures
- Use dynamic env import instead of static import
- Add graceful fallback when TOKEN is not configured
- Update .env.example to document TOKEN requirement
- Build now succeeds even without TOKEN configured

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
-# Vercel Blob Storage
+# GitHub API Token (for fetching repository data)
+# Create a personal access token at: https://github.com/settings/tokens
+# Required scopes: public_repo (or repo for private repos)
+TOKEN=ghp_your_github_token_here
+
+# Vercel Blob Storage (for leaderboard feature)
 # Add this to your .env.local file (for local development) 
 # or .env file (both work, but .env.local is preferred for local dev)
 BLOB_READ_WRITE_TOKEN=your_vercel_blob_token_here
 
-# Get your token from: https://vercel.com/dashboard/stores
-# Make sure to restart your dev server after adding the token
+# Get your Vercel Blob token from: https://vercel.com/dashboard/stores
+# Make sure to restart your dev server after adding tokens
